steam: fix main window spacing

--- a/src/steam/imports/gamelist.styl
+++ b/src/steam/imports/gamelist.styl
@@ -1,10 +1,6 @@
 #Container {
 	@extend table;
 
-	padding-right: 2px;
-	margin-left: 2px;
-	margin-bottom: 1px;
-
-	width: calc(100% - 8px);
-	box-sizing: content-box; // for the scrollbar
+	padding: 2px;
+	margin-bottom: 2px;
 }
