--- a/src/steam/imports/gamelistdropdown.styl
+++ b/src/steam/imports/gamelistdropdown.styl
@@ -1,5 +1,6 @@
 #Bar {
 	padding: 0;
+	margin-bottom: 2px;
 
 	circle {
 		stroke: var(--color-button-text);
@@ -13,6 +14,8 @@
 #MenuHeader {
 	@extend select;
 
+	margin: 0;
+
 	cursor: default;
 }
 
@@ -23,7 +26,7 @@
 
 #ViewFiltersBar {
 	margin: 0;
-	margin-right: 3px;
+	margin-left: 3px;
 }
 
 #CheckboxWithImage {
