--- a/src/steam/imports/library.styl
+++ b/src/steam/imports/library.styl
@@ -1,11 +1,13 @@
 #LibraryWindowDivider {
 	background-color: transparent;
+
 	width: 8px;
 }
 
 #MainPanel {
 	--tab-height: 18px;
 	margin-top: var(--tab-height);
+	margin-bottom: 2px;
 }
 
 #AppDetailsTransitionGroup {
