--- a/src/steam/imports/steamdesktop.styl
+++ b/src/steam/imports/steamdesktop.styl
@@ -54,5 +54,7 @@
 		display: block;
 
 		@extend hr;
+
+		margin-bottom: 2px;
 	}
 }
