--- a/src/steam/other/dialog-shared.styl
+++ b/src/steam/other/dialog-shared.styl
@@ -41,6 +41,10 @@
 		}
 	}
 
+	&InputPlaceholder {
+		font-style: normal;
+	}
+
 	&MenuPosition ._DialogInputContainer {
 		@extend .menu;
 
